# bevy-commons-game

./: .gitignore  Cargo.toml  _Cargo.toml
assets/: palette_pastel
assets/models/buildings/: house.glb
assets/models/buildings/pizzashop/: Read me.txt
assets/models/characters/bunnylamp/: bunnylamp.gltf
dna/peershare/: dna.yaml
misc/: input.rs  learning.md
src/: assets.rs  binance_api.rs  board.rs  cameras.rs  components.rs  input.rs  main.rs  tilemap.rs
src/api/: binance.rs  holochain.rs  mod.rs
src/config/: board_params.rs
src/game/: board.rs  bonus.rs  components.rs  mod.rs  player.rs
src/hextiles/: geometry.rs  hex.rs  mod.rs
src/tritiles/: geometry.rs  mod.rs  triangle.rs
src/ui/: mod.rs
