[package]
name = "bevy_alien"
version = "0.1.0"
authors = ["Jakub Lanc <jakub.lanc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
rand = "*"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
bevy_easings = "*"